--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Especificidad</title>
+    <title>Unidades</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
-    <h1 class="titulo-grande">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+    <div class="win">
+        <h3 class="titulo">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3> 
+    </div>
+    
 </body>
 </html>
