Propiedades de texto

--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unidades</title>
+    <title>Propiedades de texto</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="win">
-        <h3 class="titulo">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3> 
-    </div>
-    
+    <h5 class="titulo">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h5>
 </body>
 </html>
