--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tipografías externas</title>
+    <title>Normalize</title>
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h6 class="titulo">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h6>
+    <h1>Titulo inicial</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint esse id minus vel. Perferendis dolorem ullam vero voluptates aspernatur libero, debitis ad earum nisi unde optio, eaque magni, adipisci a?
+    Ab modi magnam architecto voluptates enim recusandae tempora consectetur, dolore possimus odio. Itaque dolore aliquid debitis hic expedita, odit qui maiores? Eius provident voluptatibus, quam recusandae soluta at alias. Excepturi?
+    Similique consequatur, odit rem ipsam vel illum dolorum sunt doloremque eos, fugiat enim temporibus. Nobis labore consectetur aperiam debitis libero pariatur magni, amet maiores molestias itaque saepe, et placeat voluptas.
+    Distinctio eum aperiam accusamus consequuntur at mollitia totam pariatur. Sunt fugit ab corporis a sapiente architecto porro saepe similique doloribus laborum laboriosam, dolorem autem dolore soluta quo voluptatibus debitis harum?</p>
 </body>
 </html>
