--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Normalize</title>
+    <title>Cajas</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Titulo inicial</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint esse id minus vel. Perferendis dolorem ullam vero voluptates aspernatur libero, debitis ad earum nisi unde optio, eaque magni, adipisci a?
-    Ab modi magnam architecto voluptates enim recusandae tempora consectetur, dolore possimus odio. Itaque dolore aliquid debitis hic expedita, odit qui maiores? Eius provident voluptatibus, quam recusandae soluta at alias. Excepturi?
-    Similique consequatur, odit rem ipsam vel illum dolorum sunt doloremque eos, fugiat enim temporibus. Nobis labore consectetur aperiam debitis libero pariatur magni, amet maiores molestias itaque saepe, et placeat voluptas.
-    Distinctio eum aperiam accusamus consequuntur at mollitia totam pariatur. Sunt fugit ab corporis a sapiente architecto porro saepe similique doloribus laborum laboriosam, dolorem autem dolore soluta quo voluptatibus debitis harum?</p>
+    <h1 class="t1">Titulo 1</h1>
+    <p>Contenido 1</p>
+    <b>Algo 1</b>
+    <h1 class="t2">Titulo 2</h1>
+    <p>Contenido 2</p>
+    <b>Algo 2</b>
 </body>
 </html>
