--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="t1">Titulo 1</h1>
-    <p>Contenido 1</p>
-    <b>Algo 1</b>
-    <h1 class="t2">Titulo 2</h1>
-    <p>Contenido 2</p>
-    <b>Algo 2</b>
+    <div class="win">
+        <h1 class="t1">Titulo 1</h1>
+        <h1 class="t2">Titulo 2</h1>
+        <h1 class="t3">Titulo 3</h1>
+    </div>
+
 </body>
 </html>
