--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cajas</title>
+    <title>Width y Height</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="win">
         <h1 class="t1">Titulo 1</h1>
-        <h1 class="t2">Titulo 2</h1>
-        <h1 class="t3">Titulo 3</h1>
     </div>
 
 </body>
