--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sombras</title>
+    <title>Outline</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Titulo 1</h1>
-    <h1>Titulo 2</h1>
+    <div class="caja1"></div><div></div><div></div><div></div>
 </body>
 </html>
