--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Z-Index</title>
+    <title>Position Absolute</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,6 +12,5 @@
     <div class="caja1">Caja 1</div>
     <div class="caja2">Caja 2</div>
     <div class="caja3">Caja 3</div>
-    <div class="caja4">Caja 4</div>
 </body>
 </html>
