--- a/index.html
+++ b/index.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Position Absolute</title>
+    <title>Position Fixed</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="caja1">Caja 1</div>
-    <div class="caja2">Caja 2</div>
-    <div class="caja3">Caja 3</div>
+    <div class="caja-fixed">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et quos explicabo, fugit alias sed libero dolor saepe,
+        sint quam recusandae ab, adipisci aperiam cupiditate voluptate nostrum molestiae eveniet.
+    </div>
+    <div class="texto">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus eum sunt eaque id dignissimos error
+        labore libero modi veritatis non temporibus corrupti odio dolore impedit, autem culpa iste velit cumque?Lorem,
+        ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus eum sunt eaque id dignissimos error labore
+        libero modi veritatis non temporibus corrupti odio dolore impedit, autem culpa iste velit cumque?Lorem, ipsum
+        dolor sit amet consectetur adipisicing elit. Voluptatibus eum sunt eaque id dignissimos error labore libero modi
+        veritatis non temporibus corrupti odio dolore impedit, autem culpa iste velit cumque?Lorem, ipsum dolor sit amet
+        consectetur adipisicing elit. Voluptatibus eum sunt eaque id dignissimos error labore libero modi veritatis non
+        temporibus corrupti odio dolore impedit, autem culpa iste velit cumque?Lorem, ipsum dolor sit amet consectetur
+        adipisicing elit. Voluptatibus eum sunt eaque id dignissimos error labore libero modi veritatis non temporibus
+        corrupti odio dolore impedit, autem culpa iste velit cumque?Lorem, ipsum dolor sit amet consectetur adipisicing
+        elit. Voluptatibus eum sunt eaque id dignissimos error labore libero modi veritatis non temporibus corrupti odio
+        dolore impedit, autem culpa iste velit cumque?Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Voluptatibus eum sunt eaque id dignissimos error labore libero modi veritatis non temporibus corrupti odio
+        dolore impedit, autem culpa iste velit cumque?Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Voluptatibus eum sunt eaque id dignissimos error labore libero modi veritatis non temporibus corrupti odio
+        dolore impedit, autem culpa iste velit cumque?Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Voluptatibus eum sunt eaque id dignissimos error labore libero modi veritatis non temporibus corrupti odio
+        dolore impedit, autem culpa iste velit cumque?Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Voluptatibus eum sunt eaque id dignissimos error labore libero modi veritatis non temporibus corrupti odio
+        dolore impedit, autem culpa iste velit cumque?Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Voluptatibus eum sunt eaque id dignissimos error labore libero modi veritatis non temporibus corrupti odio
+        dolore impedit, autem culpa iste velit cumque?Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Voluptatibus eum sunt eaque id dignissimos error labore libero modi veritatis non temporibus corrupti odio
+        dolore impedit, autem culpa iste velit cumque?Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Voluptatibus eum sunt eaque id dignissimos error labore libero modi veritatis non temporibus corrupti odio
+        dolore impedit, autem culpa iste velit cumque?
+    </div>
 </body>
+
 </html>
