--- a/index.html
+++ b/index.html
@@ -1,16 +1,42 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Position Fixed</title>
+    <title>Position Sticky</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
+    <div class="texto">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus eum sunt eaque id dignissimos error
+        labore libero modi veritatis non temporibus corrupti odio dolore impedit, autem culpa iste velit cumque?Lorem,
+        ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus eum sunt eaque id dignissimos error labore
+        libero modi veritatis non temporibus corrupti odio dolore impedit, autem culpa iste velit cumque?Lorem, ipsum
+        dolor sit amet consectetur adipisicing elit. Voluptatibus eum sunt eaque id dignissimos error labore libero modi
+        veritatis non temporibus corrupti odio dolore impedit, autem culpa iste velit cumque?Lorem, ipsum dolor sit amet
+        consectetur adipisicing elit. Voluptatibus eum sunt eaque id dignissimos error labore libero modi veritatis non
+        temporibus corrupti odio dolore impedit, autem culpa iste velit cumque?Lorem, ipsum dolor sit amet consectetur
+        adipisicing elit. Voluptatibus eum sunt eaque id dignissimos error labore libero modi veritatis non temporibus
+        corrupti odio dolore impedit, autem culpa iste velit cumque?Lorem, ipsum dolor sit amet consectetur adipisicing
+        elit. Voluptatibus eum sunt eaque id dignissimos error labore libero modi veritatis non temporibus corrupti odio
+        dolore impedit, autem culpa iste velit cumque?Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Voluptatibus eum sunt eaque id dignissimos error labore libero modi veritatis non temporibus corrupti odio
+        dolore impedit, autem culpa iste velit cumque?Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Voluptatibus eum sunt eaque id dignissimos error labore libero modi veritatis non temporibus corrupti odio
+        dolore impedit, autem culpa iste velit cumque?Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Voluptatibus eum sunt eaque id dignissimos error labore libero modi veritatis non temporibus corrupti odio
+        dolore impedit, autem culpa iste velit cumque?Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Voluptatibus eum sunt eaque id dignissimos error labore libero modi veritatis non temporibus corrupti odio
+        dolore impedit, autem culpa iste velit cumque?Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Voluptatibus eum sunt eaque id dignissimos error labore libero modi veritatis non temporibus corrupti odio
+        dolore impedit, autem culpa iste velit cumque?Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Voluptatibus eum sunt eaque id dignissimos error labore libero modi veritatis non temporibus corrupti odio
+        dolore impedit, autem culpa iste velit cumque?Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Voluptatibus eum sunt eaque id dignissimos error labore libero modi veritatis non temporibus corrupti odio
+        dolore impedit, autem culpa iste velit cumque?
+    </div>
     <div class="caja-fixed">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et quos explicabo, fugit alias sed libero dolor saepe,
         sint quam recusandae ab, adipisci aperiam cupiditate voluptate nostrum molestiae eveniet.
@@ -44,5 +70,4 @@
         dolore impedit, autem culpa iste velit cumque?
     </div>
 </body>
-
 </html>
