--- a/index.html
+++ b/index.html
@@ -4,19 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Float</title>
+    <title>Pseudoelementos</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="cont">
-        <img src="https://static.vecteezy.com/system/resources/previews/001/910/477/original/flat-colorful-space-with-rocket-background-free-vector.jpg">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus blanditiis aliquam fugiat nulla vel.
+    <div class="text">
+        <div id="ejemplo1">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus blanditiis aliquam fugiat nulla vel.
             Doloremque dolore molestiae, cupiditate, laboriosam quis ullam iure expedita consequuntur in quidem sit,
             ab exercitationem temporibus?
-            Temporibus, voluptatum laborum. Aut veniam voluptatem vel tempora, voluptatum, omnis ipsam quam quisquam
-            deserunt incidunt aliquam facilis laudantium unde quaerat! Hic ipsum ullam dolor mollitia possimus in
-            beatae id exercitationem.
+        </div><br>
+
+        <div id="ejemplo2">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus blanditiis aliquam fugiat nulla vel.
+            Doloremque dolore molestiae, cupiditate, laboriosam quis ullam iure expedita consequuntur in quidem sit,
+            ab exercitationem temporibus?           
+        </div>
+
+        <form>
+            <input type="text" placeholder="Ingrese un texto aquí">
+        </form>
+
+        <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1><br>
+
+        <b> imaginar, </b>
     </div>
 </body>
 </html>
