--- a/index.html
+++ b/index.html
@@ -4,31 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pseudoelementos</title>
+    <title>Pseudoclases</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="text">
-        <div id="ejemplo1">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus blanditiis aliquam fugiat nulla vel.
-            Doloremque dolore molestiae, cupiditate, laboriosam quis ullam iure expedita consequuntur in quidem sit,
-            ab exercitationem temporibus?
-        </div><br>
+    <div class="caja1">Caja 1</div><br>
 
-        <div id="ejemplo2">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus blanditiis aliquam fugiat nulla vel.
-            Doloremque dolore molestiae, cupiditate, laboriosam quis ullam iure expedita consequuntur in quidem sit,
-            ab exercitationem temporibus?           
-        </div>
+    <a href="https://github.com/lzanabria" target="_blank">Curso CSS - repositorio</a><br><br>
 
-        <form>
-            <input type="text" placeholder="Ingrese un texto aquí">
-        </form>
+    <a href="https://github.com/lzanabria/Curso-CSS.git" target="_blank">Curso CSS - repositorio</a>
 
-        <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1><br>
+    <div class="press">Presionar</div>
 
-        <b> imaginar, </b>
-    </div>
+    <input type="text" placeholder="Ingrese algo">
+
+    <b lang="en">¡Hello world!</b>
+    <b lang="es">¡Hola mundo!</b>
 </body>
 </html>
