--- a/index.html
+++ b/index.html
@@ -4,22 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pseudoclases</title>
+    <title>Object-fit</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="caja1">Caja 1</div><br>
+    <h2>Contain</h2>
+    <div class="caja">
+        <img id="img1" src="https://static.vecteezy.com/system/resources/previews/001/910/477/original/flat-colorful-space-with-rocket-background-free-vector.jpg">
+    </div><br>
 
-    <a href="https://github.com/lzanabria" target="_blank">Curso CSS - repositorio</a><br><br>
+    <h2>Cover</h2>
+    <div class="caja">
+        <img id="img2" src="https://static.vecteezy.com/system/resources/previews/001/910/477/original/flat-colorful-space-with-rocket-background-free-vector.jpg">
+    </div><br>
 
-    <a href="https://github.com/lzanabria/Curso-CSS.git" target="_blank">Curso CSS - repositorio</a>
+    <h2>None</h2>
+    <div class="caja">
+        <img id="img3" src="https://static.vecteezy.com/system/resources/previews/001/910/477/original/flat-colorful-space-with-rocket-background-free-vector.jpg">
+    </div><br>
 
-    <div class="press">Presionar</div>
-
-    <input type="text" placeholder="Ingrese algo">
-
-    <b lang="en">¡Hello world!</b>
-    <b lang="es">¡Hola mundo!</b>
+    <h2>Scale-down</h2>
+    <div class="caja">
+        <img id="img4" src="https://static.vecteezy.com/system/resources/previews/001/910/477/original/flat-colorful-space-with-rocket-background-free-vector.jpg">
+    </div>
 </body>
 </html>
