--- a/index.html
+++ b/index.html
@@ -4,19 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Objet Position</title>
+    <title>Cursor</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Position left</h2>
-    <div class="caja">
-        <img id="img1" src="https://static.vecteezy.com/system/resources/previews/001/910/477/original/flat-colorful-space-with-rocket-background-free-vector.jpg">
-    </div><br>
-
-    <h2>Position right</h2>
-    <div class="caja">
-        <img id="img2" src="https://static.vecteezy.com/system/resources/previews/001/910/477/original/flat-colorful-space-with-rocket-background-free-vector.jpg">
-    </div><br>
+    <div class="caja">Cursor pointer</div>
 </body>
 </html>
