--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cursor</title>
+    <title>Colorización</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="caja">Cursor pointer</div>
+    <div class="caja1">Color hex #ff6600</div>
+    <div class="caja2">Color rgb(0, 4, 255)</div>
+    <div class="caja3">Color hsl(311, 100%, 50%)</div>
+    <div class="caja4">Color hwb(128 0% 0%)</div>
 </body>
 </html>
